apps/alertmanager/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alertmanager
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/part-of: alertmanager
    homelab.local/OwnedBy: ElPoshoX
